<resources>
    <string name="app_name">CMHapp</string>
    <string name="loginButton">Create New Meeting</string>
    <string name="searchButton">Nearby Meetings</string>
    <string name="mmapButton">Meetings Map</string>
    <string name="pickLocation">Pick Location</string>
    <string name="CreateMeeting">Create Meeting</string>
    <string name="dateSelection">Choose date</string>
    <string name="timeSelection">Choose time</string>
    <string name="coordinates">Coordinates</string>
    <string name="locationString">Location</string>
    <string name="meetingDescription">Meeting Description</string>
    <string name="confirmDate">Confirm Date</string>
    <string name="confirmTime">Confirm Time</string>
    <string name="api_key">AIzaSyDdcZQ6aTfa3qyJpseu2BSbCpWfjzO0EGQ</string>
    <string name="title_activity_meetings_map">Map</string>
</resources>
