<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_image_res"
        tools:context=".FormActivity">

    <EditText
            android:layout_width="288dp"
            android:layout_height="176dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/description"
            android:hint="@string/meetingDescription"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toTopOf="@+id/submitButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/locationPicker"/>

    <DatePicker android:layout_width="348dp"
                android:layout_height="wrap_content"
                android:id="@+id/datePicker"

                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    <TimePicker android:layout_width="360dp" android:layout_height="351dp"
                android:id="@+id/timePicker"
                android:visibility="gone"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/pickLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/locationPicker"
            android:name="com.google.android.geo.API_KEY"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/meetingName"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintHorizontal_bias="0.502" android:layout_marginTop="150dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/meetingName"
            android:hint="Meeting Name"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.307" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:visibility="gone"
            android:text="@string/locationString"
            android:ems="10"
            android:id="@+id/locationInfo"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
    />
    <EditText
            android:layout_width="78dp"
            android:layout_height="43dp"
            android:visibility="gone"
            android:inputType="textPersonName"
            android:text="@string/coordinates"
            android:ems="10"
            android:id="@+id/coordinates"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <Button
            android:text="@string/CreateMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitButton"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/description" app:layout_constraintHorizontal_bias="0.502"
            android:layout_marginBottom="20dp"/>
    <Button
            android:text="@string/dateSelection"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:id="@+id/dateSelection" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.3" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/timeSelection" android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/timeSelection"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:id="@+id/timeSelection" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.3"
            app:layout_constraintStart_toEndOf="@+id/dateSelection"
    />
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/confirmDate"
            app:layout_constraintTop_toBottomOf="@id/datePicker"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="8dp"
            android:visibility="gone"
            android:id="@+id/confirmDate"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/confirmTime"
            app:layout_constraintTop_toBottomOf="@id/timePicker"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="8dp"
            android:visibility="gone"
            android:id="@+id/confirmTime"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <ImageView
            android:layout_width="55dp"
            android:layout_height="0dp" app:srcCompat="@drawable/meetingicon"
            android:id="@+id/imagePicker"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="360dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="150dp"/>
    <TextView
            android:text="Choose Meeting Photo:"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="100dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="350dp"/>
</android.support.constraint.ConstraintLayout>