<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_image_res"
        android:id="@+id/constraintLayout1"
        tools:context=".MainActivity">


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/icon_create_meeting"
            android:id="@+id/imageView"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="284dp"/>
    <Button
            android:id="@+id/button"
            android:onClick="sendMessage"
            android:text="@string/loginButton"
            android:layout_gravity="end"
            android:fontFamily="sans-serif"
            android:textColor="#FFFFFF"
            android:letterSpacing="0.0125"
            android:textSize="16sp"


            android:layout_width="220dp"
            android:layout_height="60dp"
            android:background="@drawable/buttondesign"

            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="550dp" app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:textColor="#FFFFFF"
            android:letterSpacing="0.0125"
            android:textSize="16sp"
            android:background="@drawable/buttondesign"
            android:onClick="sendMessage2"

            android:text="@string/searchButton"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:id="@+id/button2"

            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="350dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:textColor="#FFFFFF"
            android:letterSpacing="0.0125"
            android:textSize="16sp"
            android:background="@drawable/buttondesign"
            android:text="@string/mmapButton"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:id="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="450dp" app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logotry"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="125dp"/>
</android.support.constraint.ConstraintLayout>